# Crypto-Trading-Multi-Agent-System

./: .env.example  .gitignore  AGENTS.md  Next_Step_Plan.md  README.md  pyproject.toml
app/: main.py
app/agents/base/: base_agent.py  base_tool.py  execution_trace.py  tool_registry.py
app/agents/master/: agent.py  orchestrator.py
app/agents/risk_officer/: agent.py  decision_policy.py  toolset.py
app/agents/risk_officer/tools/: approve_plan_tool.py  calc_position_size_tool.py  check_exposure_tool.py
app/agents/sentiment_analyst/: agent.py  decision_policy.py  toolset.py
app/agents/sentiment_analyst/tools/: classify_event_tool.py  fetch_news_tool.py  score_sentiment_tool.py
app/agents/ta_analyst/: agent.py  decision_policy.py  toolset.py
app/agents/ta_analyst/tools/: calc_indicator_tool.py  detect_levels_tool.py  get_ohlcv_tool.py
app/config/: settings.py
app/schemas/: risk_report.py  sentiment_report.py  ta_report.py  task.py  trade_plan.py
app/services/: http_json_client.py  llm_client.py  market_data_service.py  news_service.py  risk_service.py  storage_service.py  tavily_api_client.py  weex_api_client.py
app/workflows/: master_workflow.py
docs/: architecture.md
tests/: test_agent_llm_augmentation.py  test_live_provider_services.py  test_llm_client.py  test_master_workflow.py  test_risk_agent_tools.py  test_risk_report_schema.py  test_sentiment_agent_tools.py  test_sentiment_report_schema.py  test_ta_agent_tools.py  test_ta_report_schema.py  test_task_schema.py  test_trade_plan_schema.py
