[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-mas"
version = "0.1.0"
description = "MVP multi-agent crypto trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
